# ChangeLog for app-portage/portpeek
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.66 2010/04/05 17:47:40 armin76 Exp $

  05 Apr 2010; Raúl Porcel <armin76@gentoo.org> portpeek-1.5.8.4.ebuild:
  sparc stable wrt #309059

  30 Mar 2010; Michael Pagano <mpagano@gentoo.org> portpeek-1.9.36.ebuild:
  Move to git repo for 1.9+ versions

  28 Mar 2010; Michael Pagano <mpagano@gentoo.org> portpeek-1.5.7.2.ebuild,
  portpeek-1.5.8.4.ebuild, portpeek-1.9.36.ebuild:
  Perform python2->3 fixes as per bug #311793

  28 Mar 2010; Mike Pagano <mpagano@gentoo.org> -portpeek-1.9.35.ebuild:
  Drop old version

  25 Mar 2010; Mike Pagano <mpagano@gentoo.org> portpeek-1.5.7.2.ebuild,
  portpeek-1.5.8.4.ebuild, portpeek-1.9.35.ebuild, portpeek-1.9.36.ebuild:
  add python 2.6 dependency

  21 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  portpeek-1.5.8.4.ebuild:
  x86 stable wrt bug #309059

*portpeek-1.9.36 (19 Mar 2010)

  19 Mar 2010; Mike Pagano <mpagano@gentoo.org> portpeek-1.9.35.ebuild,
  +portpeek-1.9.36.ebuild:
  Restrict portpeek 1.9.35 to specific gentoolkit version and bump portpeek
  to support latest gentoolkit api change.

  15 Mar 2010; nixnut <nixnut@gentoo.org> portpeek-1.5.8.4.ebuild:
  ppc stable #309059

  15 Feb 2010; Mike Pagano <mpagano@gentoo.org> -portpeek-1.6.7.ebuild,
  -portpeek-1.7.0.ebuild, -portpeek-1.7.5.ebuild:
  Remove old versions

*portpeek-1.9.35 (10 Feb 2010)
*portpeek-1.5.8.4 (10 Feb 2010)

  10 Feb 2010; Mike Pagano <mpagano@gentoo.org> -portpeek-1.5.8.3.ebuild,
  +portpeek-1.5.8.4.ebuild, -portpeek-1.9.34.ebuild,
  +portpeek-1.9.35.ebuild:
  Bug fix and old version cleanup

*portpeek-1.9.34 (09 Feb 2010)
*portpeek-1.5.8.3 (09 Feb 2010)

  09 Feb 2010; Mike Pagano <mpagano@gentoo.org> -portpeek-1.5.8.2.ebuild,
  +portpeek-1.5.8.3.ebuild, -portpeek-1.9.33.ebuild,
  +portpeek-1.9.34.ebuild:
  Version bump to fix bug #304073
