@@ -1,7 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST portpeek-1.5.7.2.tar.gz 6286 RMD160 72178e5601def706752027bef4ad8e7358b1841a SHA1 f52db5a55e0681ea1f7a4b826632913105ec61ad SHA256 42493232a5e21f233f2a37bb77a27aed6d1bb7a465ec93f08e23dd2c5eca9dfd
 DIST portpeek-1.5.8.4.tar.gz 7531 RMD160 32741d739be4a321bf67f905801b7c9cc788256c SHA1 5d9c8d68c9101bf9595b665e5eeb759236dafc05 SHA256 301ed1a2da8e518f34e1a28f751242f652981ba905805685012b274a07cd87fc
 EBUILD portpeek-1.5.7.2.ebuild 786 RMD160 fe7dcb56796cec5c1ebb5b6102f5b42efb67773c SHA1 4c8a0495295b3d33ad5412cf9a9e18234d9f13b8 SHA256 2574809ca2d0a96caad6f93b7876d0d54beee012d3ba0fe38618b1ae4e0ec821
 EBUILD portpeek-1.5.8.4.ebuild 787 RMD160 9d579da447e29e83af6f15c4ccedb14276ea1c70 SHA1 2203a3a12829fe65020a495770e312c2eb91d5ca SHA256 c6e74ad2b5bc2d2707c542fd972e1ac1a8e4840eb2ea62186368b832730681f0
 EBUILD portpeek-1.9.36.ebuild 888 RMD160 c7f55c09278fc5046010e43d00206918886f14ac SHA1 d1b414445d6dc0a53c401b0f21eb14acbd65db11 SHA256 8ad5688619374041b618008dca430dd5358672dd154248f53bbdedda2feaea4a
-MISC ChangeLog 11463 RMD160 e01daf2a70a00488246cf84725ffffe39c85a814 SHA1 495bae3d8e8533b39c2ab8f505d3edabec8765b6 SHA256 c103585a8b7cd055d0edeeebd838e280da558f464e147ed95a4679114de336ff
+EBUILD portpeek-2.0.0.ebuild 867 RMD160 2f7a0570c337998d8290f19e17da477bfb32f723 SHA1 fe43c5235b8c248e9059db6c986b6434c0476d47 SHA256 f11aa3c372ccb98bbc76536de72d2eab6b4876cb7dcbdd5b36482bf8059cd9db
+MISC ChangeLog 11607 RMD160 97a6600c06ad1f1b6b3a41f8f0c01e7977605a94 SHA1 2fd88f3b009002a8c38c5dd40f93fb648a0a29bd SHA256 0f6ab3ee660eb441d48282e86d8366096996c458e682d35065f9376df9ff805d
 MISC metadata.xml 223 RMD160 f1dbda8042f764bb9ee2669116d1b913dd74aff1 SHA1 b5bf88b5ffd7421c3a6587fb2be3f1f1a63d24d2 SHA256 f758aa7033a6e5c4c1023abf7787acca62408ccc718a84430b6fb982c97dd873
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAku75sUACgkQPDPGULV25ON5jgCeIsrZAStjsb8KNoAocx03PyWg
+62wAoIdCEkUQwHsRm9jHcf1J/NUTlJu/
+=cLEL
+-----END PGP SIGNATURE-----
