@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/portpeek
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.66 2010/04/05 17:47:40 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.67 2010/04/07 01:58:25 mpagano Exp $
+
+*portpeek-2.0.0 (07 Apr 2010)
+
+  07 Apr 2010; Mike Pagano <mpagano@gentoo.org> +portpeek-2.0.0.ebuild:
+  Version bump. Support for python 3.1.
 
   05 Apr 2010; Raúl Porcel <armin76@gentoo.org> portpeek-1.5.8.4.ebuild:
   sparc stable wrt #309059
